# aochs

./: .gitignore  Advent.hs  day1.hs  day10.hs  day11.hs  day12.hs  day14.hs  day2.hs  day3.hs  day4.hs  day5.hs  day6.hs  day9.hs
2021/: day1.hs
day1/: Program.cs
day18/: Main.hs  Main.y  day18.cabal
day7/: Main.hs  day7.cabal
day8/: Main.hs  day8.cabal
